--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
-,terraform
-*.backup
+#  Local .terraform directories**/.terraform/*
+# .tfstate files
+*.tfstate
+.tfstate.
+# .tfvars files
+*.tfvars
