--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-#  Local .terraform directories**/.terraform/*
+#  Local .terraform directories
+**/.terraform/*
 # .tfstate files
 *.tfstate
 .tfstate.
