--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 #  Local .terraform directories
-.backup
 .terraform
 **/.terraform/*
 # .tfstate files
@@ -7,3 +6,5 @@
 .tfstate.
 # .tfvars files
 *.tfvars
+# terraform (and other) backup files
+*.backup
